# unet

./: .gitignore  .pylintrc  README.md  config.json  mypy.ini  pyproject.toml
.github/workflows/: main.yml
docker/: Dockerfile.local  requirements.txt
docker/app/: main.py
scripts/: ckpt_to_onnx.py  debug_endpoint.py  list_endpoint_logs.py  test_endpoint.py
src/: config.py  data.py  main.py  train.py
src/unet/: model.py  trainer.py  utils.py
