[project]
name = "unet-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.76",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "numpy>=2.3.4",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytorch-lightning>=2.5.6",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "pylint>=4.0.3",
    "wandb>=0.23.0",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.uv.workspace]
members = [
    "cdk",
]
